New Parser, Font changes, Bug fixes

--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -7,4 +7,5 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:textColor="#3B3131"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
+    android:minHeight="?android:attr/listPreferredItemHeightSmall"
+    android:textStyle="bold" />
