--- a/app/src/main/res/layout/activity_nadget_main.xml
+++ b/app/src/main/res/layout/activity_nadget_main.xml
@@ -25,14 +25,13 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@android:color/white"
         android:orientation="vertical" >
 
         <ImageView
             android:id="@+id/image_view"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:background="@android:color/white"
+            android:background="#EFEBE9"
             android:src="@mipmap/ic_launcher" />
 
         <!-- The navigation drawer -->
