--- a/app/src/main/res/layout/activity_nadget_main.xml
+++ b/app/src/main/res/layout/activity_nadget_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NadgetMain">
+
     <!-- The main content view -->
     <FrameLayout
         android:id="@+id/content_frame"
@@ -20,6 +21,8 @@
             android:text="@string/placeholder" />
 
     </FrameLayout>
+
+    <!-- The navigation drawer -->
     <RelativeLayout
         android:id="@+id/left_drawer_content_layout"
         android:layout_width="240dp"
@@ -27,14 +30,12 @@
         android:layout_gravity="start"
         android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/image_view"
+        <ImageView android:id="@+id/image_view"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="#EFEBE9"
             android:src="@mipmap/ic_launcher" />
 
-        <!-- The navigation drawer -->
         <ListView android:id="@+id/left_drawer"
             android:layout_width="240dp"
             android:layout_height="match_parent"
@@ -46,6 +47,5 @@
             android:background="@android:color/white"/>
 
     </RelativeLayout>
-
 
 </android.support.v4.widget.DrawerLayout>
