--- a/app/src/main/res/layout/main_view_row.xml
+++ b/app/src/main/res/layout/main_view_row.xml
@@ -1,51 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#efebe9">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#E0E0E0">
 
-    <TextView
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/postTitle"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:typeface="sans"
-        android:gravity="left"
-        android:textSize="18dp"
-        android:textColor="#000000"
-        android:paddingLeft="7dp"
-        android:paddingTop="20dp"
-        android:paddingRight="7dp"
-        android:paddingBottom="15dp"
-        android:lines="2" />
+        app:cardCornerRadius="10sp"
+        app:cardElevation="2sp"
+        app:cardBackgroundColor="#ffffff"
+        android:layout_gravity="center"
+        app:cardUseCompatPadding="true"
+        android:id="@+id/cv">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/postDate"
-        android:textAlignment="center"
-        android:textStyle="italic"
-        android:gravity="left"
-        android:textSize="14dp"
-        android:textColor="#000000"
-        android:paddingLeft="7dp"
-        android:paddingTop="20dp"
-        android:paddingRight="7dp"
-        android:paddingBottom="15dp"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/postImage"
-        android:paddingLeft="5dp"
-        android:paddingTop="10dp"
-        android:paddingRight="5dp"
-        android:paddingBottom="10dp"
-        />
+            <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:id="@+id/postTitle"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:gravity="center"
+            android:textSize="18dp"
+            android:textColor="#3B3131"
+            android:paddingLeft="7dp"
+            android:paddingTop="20dp"
+            android:paddingRight="7dp"
+            android:paddingBottom="15dp"
+            android:lines="2" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/postDate"
+            android:textAlignment="center"
+            android:textStyle="italic"
+            android:gravity="center"
+            android:textSize="14dp"
+            android:textColor="#3B3131"
+            android:paddingLeft="7dp"
+            android:paddingTop="20dp"
+            android:paddingRight="7dp"
+            android:paddingBottom="15dp"
+            />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/postImage"
+            android:paddingLeft="7dp"
+            android:paddingTop="20dp"
+            android:paddingRight="7dp"
+            android:paddingBottom="15dp"
+            />
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
