Feed selection updated

--- a/app/src/main/res/layout/activity_feed_selector.xml
+++ b/app/src/main/res/layout/activity_feed_selector.xml
@@ -17,12 +17,13 @@
         android:id="@+id/scrollView"
         android:background="#ffffff">
 
-    <LinearLayout
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/feedSelectorLinear"
         android:orientation="vertical"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:columnCount="2">
 
         <ToggleButton
             android:layout_width="wrap_content"
@@ -31,297 +32,353 @@
             android:tag="ndtv"
             android:onClick="save"
             android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
             android:background="@drawable/ndtv"
             android:textStyle="bold"
             android:textSize="20dp"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:textAlignment="textEnd"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_row="0"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton2"
             android:tag="times"            android:textOff=""
-            android:textOn="OK"
-
+            android:textOn="O"
+            android:layout_column="1"
             android:background="@drawable/times"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_row="0"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton3"            android:textOff=""
-            android:textOn="OK"
-
+            android:textOn="O"
+            android:layout_column="0"
             android:tag="firstpost"
             android:background="@drawable/firstpost"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_row="1"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton4"            android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
 
             android:tag="digit"
             android:background="@drawable/digit"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_column="1"
+            android:layout_row="1"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton5"            android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
 
             android:tag="gizmodo"
             android:background="@drawable/gizmodo"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_column="0"
+            android:layout_row="2"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton6"            android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
 
             android:tag="techtree"
             android:background="@drawable/techtree"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_column="1"
+            android:layout_row="2"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton7"            android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
 
             android:tag="ibtimes"
             android:background="@drawable/ibtimes"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_column="0"
+            android:layout_row="3"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton8"
             android:tag="onlygizmos" android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
             android:background="@drawable/onlygizmos"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_column="1"
+            android:layout_row="3"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton9"            android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
 
             android:tag="indianexpress"
             android:background="@drawable/indianexpress"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_column="0"
+            android:layout_row="4"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton10"            android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
 
             android:tag="bgr"
             android:background="@drawable/bgr"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_column="1"
+            android:layout_row="4"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton11"            android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
 
             android:tag="thehindu"
             android:background="@drawable/thehindu"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_column="0"
+            android:layout_row="5"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton12"            android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
 
             android:tag="fonearena"
             android:background="@drawable/fonearena"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_column="1"
+            android:layout_row="5"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton13"            android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
 
             android:tag="igyaan"
             android:background="@drawable/igyaan"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_column="0"
+            android:layout_row="6"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton14"            android:textOff=""
-            android:textOn="OK"
+            android:textOn="O"
 
             android:tag="gogi"
             android:background="@drawable/gogi"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
+            android:shadowColor="#e5e0e0"
+            android:layout_column="1"
+            android:layout_row="6"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/toggleButton15"            android:textOff=""
-            android:textOn="OK"
-
+            android:textOn="O"
+            android:layout_column="0"
             android:tag="thegeekybyte"
             android:background="@drawable/thegeekybyte"
-            android:textColor="#000000"
+            android:textColor="#0d47a1"
             android:onClick="save"
             android:textStyle="bold"
             android:textAlignment="textEnd"
             android:textSize="20dp"
             android:checked="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
-            android:shadowColor="#e5e0e0" />
-    </LinearLayout>
+            android:shadowColor="#e5e0e0"
+            android:layout_row="7"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp" />
+    </GridLayout>
     </ScrollView>
 </LinearLayout>
