--- a/app/src/main/res/layout/recyclerview_header.xml
+++ b/app/src/main/res/layout/recyclerview_header.xml
@@ -2,16 +2,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#E0E0E0"
+    android:background="#473e30"
     android:foregroundGravity="center">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="208dp"
         android:id="@+id/headerImage"
-        android:src="@drawable/headerbg"
         android:layout_centerHorizontal="true"
-        />
+        android:background="@drawable/headerbg" />
 
     <TextView
         android:id="@+id/headerText"
@@ -21,7 +20,7 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ffffff"
+        android:textColor="#e1f4f6"
         android:textAlignment="center"
         android:typeface="sans"
         android:layout_gravity="center"
@@ -29,6 +28,7 @@
         android:paddingTop="10dp"
         android:paddingRight="5dp"
         android:paddingBottom="5dp"
-        android:gravity="center" />
+        android:gravity="center"
+        android:shadowColor="#0e0202" />
 
 </FrameLayout>
