--- a/app/src/main/res/layout/activity_feed_selector.xml
+++ b/app/src/main/res/layout/activity_feed_selector.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,345 +18,21 @@
         android:id="@+id/scrollView"
         android:background="#ffffff">
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/feedSelectorLinear"
-        android:orientation="vertical"
-        android:background="#ffffff"
-        android:columnCount="2">
+        <com.anton46.collectionitempicker.CollectionPicker
+            android:id="@+id/feed_picker"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:cp_addIcon="@android:drawable/ic_menu_add"
+            app:cp_cancelIcon="@android:drawable/ic_menu_close_clear_cancel"
+            app:cp_itemBackgroundNormal="#5D4037"
+            app:cp_itemBackgroundPressed="#B71C1C"
+            app:cp_itemMargin="5dp"
+            app:cp_textPaddingBottom="5dp"
+            app:cp_textPaddingLeft="10dp"
+            app:cp_textPaddingRight="10dp"
+            app:cp_textPaddingTop="5dp"
+            app:cp_simplified="false" />
 
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton"
-            android:tag="ndtv"
-            android:onClick="save"
-            android:textOff=""
-            android:textOn="O"
-            android:background="@drawable/ndtv"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:textColor="#0d47a1"
-            android:textAlignment="textEnd"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_row="0"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton2"
-            android:tag="times"            android:textOff=""
-            android:textOn="O"
-            android:layout_column="1"
-            android:background="@drawable/times"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_row="0"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton4"            android:textOff=""
-            android:textOn="O"
-
-            android:tag="digit"
-            android:background="@drawable/digit"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_column="1"
-            android:layout_row="1"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton5"            android:textOff=""
-            android:textOn="O"
-
-            android:tag="gizmodo"
-            android:background="@drawable/gizmodo"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_column="0"
-            android:layout_row="2"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton6"            android:textOff=""
-            android:textOn="O"
-
-            android:tag="techtree"
-            android:background="@drawable/techtree"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_column="1"
-            android:layout_row="2"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton7"            android:textOff=""
-            android:textOn="O"
-
-            android:tag="ibtimes"
-            android:background="@drawable/ibtimes"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_column="0"
-            android:layout_row="3"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton8"
-            android:tag="onlygizmos" android:textOff=""
-            android:textOn="O"
-            android:background="@drawable/onlygizmos"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_column="1"
-            android:layout_row="3"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton9"            android:textOff=""
-            android:textOn="O"
-
-            android:tag="indianexpress"
-            android:background="@drawable/indianexpress"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_column="0"
-            android:layout_row="4"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton10"            android:textOff=""
-            android:textOn="O"
-
-            android:tag="bgr"
-            android:background="@drawable/bgr"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_column="1"
-            android:layout_row="4"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton11"            android:textOff=""
-            android:textOn="O"
-
-            android:tag="thehindu"
-            android:background="@drawable/thehindu"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_column="0"
-            android:layout_row="5"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton12"            android:textOff=""
-            android:textOn="O"
-
-            android:tag="fonearena"
-            android:background="@drawable/fonearena"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_column="1"
-            android:layout_row="5"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton13"            android:textOff=""
-            android:textOn="O"
-
-            android:tag="igyaan"
-            android:background="@drawable/igyaan"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_column="0"
-            android:layout_row="6"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton14"            android:textOff=""
-            android:textOn="O"
-
-            android:tag="gogi"
-            android:background="@drawable/gogi"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_column="1"
-            android:layout_row="6"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/toggleButton15"            android:textOff=""
-            android:textOn="O"
-            android:layout_column="0"
-            android:tag="thegeekybyte"
-            android:background="@drawable/thegeekybyte"
-            android:textColor="#0d47a1"
-            android:onClick="save"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="20dp"
-            android:checked="false"
-            android:shadowColor="#e5e0e0"
-            android:layout_row="7"
-            android:layout_columnWeight="2"
-            android:layout_columnSpan="1"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp" />
-    </GridLayout>
     </ScrollView>
 </LinearLayout>
