--- a/app/src/main/res/layout/activity_feed_selector.xml
+++ b/app/src/main/res/layout/activity_feed_selector.xml
@@ -5,34 +5,33 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="in.pleb.nadget.FeedSelector"
     android:background="#ffffff">
 
-    <ScrollView
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView"
-        android:background="#ffffff">
+        android:layout_height="54dp"
+        android:background="#3B3131"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-        <com.anton46.collectionitempicker.CollectionPicker
-            android:id="@+id/feed_picker"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            app:cp_addIcon="@android:drawable/ic_menu_add"
-            app:cp_cancelIcon="@android:drawable/ic_menu_close_clear_cancel"
-            app:cp_itemBackgroundNormal="#5D4037"
-            app:cp_itemBackgroundPressed="#B71C1C"
-            app:cp_itemMargin="5dp"
-            app:cp_textPaddingBottom="5dp"
-            app:cp_textPaddingLeft="10dp"
-            app:cp_textPaddingRight="10dp"
-            app:cp_textPaddingTop="5dp"
-            app:cp_simplified="false" />
+    <com.anton46.collectionitempicker.CollectionPicker
+        android:id="@+id/feed_picker"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        app:cp_addIcon="@android:drawable/ic_menu_add"
+        app:cp_cancelIcon="@android:drawable/ic_menu_close_clear_cancel"
+        app:cp_itemBackgroundNormal="#5D4037"
+        app:cp_itemBackgroundPressed="#B71C1C"
+        app:cp_itemMargin="5dp"
+        app:cp_textPaddingBottom="5dp"
+        app:cp_textPaddingLeft="10dp"
+        app:cp_textPaddingRight="10dp"
+        app:cp_textPaddingTop="5dp"
+        app:cp_simplified="false" />
 
-    </ScrollView>
+
 </LinearLayout>
