--- a/app/src/main/res/layout/activity_nadget_main.xml
+++ b/app/src/main/res/layout/activity_nadget_main.xml
@@ -1,14 +1,26 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NadgetMain">
+
     <!-- The main content view -->
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/main_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="204dp"
+            android:background="#3B3131"
+            android:titleTextColor="#ffffff"
+            android:subtitleTextColor="#ffffff"
+            android:elevation="4dp"
+            android:textAlignment="center" />
 
         <fragment
             android:name="in.pleb.nadget.MainFragment"
@@ -34,7 +46,7 @@
         <ImageView android:id="@+id/image_view"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:background="#EFEBE9"
+            android:background="#ffffff"
             android:src="@drawable/nadget2" />
 
         <ListView android:id="@+id/left_drawer"
