--- a/app/src/main/res/layout/activity_post_view.xml
+++ b/app/src/main/res/layout/activity_post_view.xml
@@ -1,12 +1,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff"
     tools:context="in.pleb.nadget.PostView">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:background="#3B3131"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 
     <WebView
         android:layout_width="fill_parent"
@@ -14,5 +23,6 @@
         android:id="@+id/webView"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:background="#ffffff" />
+        android:background="#ffffff"
+        android:layout_below="@+id/main_toolbar" />
 </RelativeLayout>
