--- a/app/src/main/res/layout/activity_feed_selector.xml
+++ b/app/src/main/res/layout/activity_feed_selector.xml
@@ -24,8 +24,8 @@
         android:layout_weight="1"
         app:cp_addIcon="@android:drawable/ic_menu_add"
         app:cp_cancelIcon="@android:drawable/ic_menu_close_clear_cancel"
-        app:cp_itemBackgroundNormal="#5D4037"
-        app:cp_itemBackgroundPressed="#B71C1C"
+        app:cp_itemBackgroundNormal="#C0C0C0"
+        app:cp_itemBackgroundPressed="#5D4037"
         app:cp_itemMargin="5dp"
         app:cp_textPaddingBottom="5dp"
         app:cp_textPaddingLeft="10dp"
