--- a/app/src/main/res/layout/activity_nadget_main.xml
+++ b/app/src/main/res/layout/activity_nadget_main.xml
@@ -14,40 +14,70 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/main_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="204dp"
-            android:background="#3B3131"
-            android:titleTextColor="#ffffff"
-            android:subtitleTextColor="#ffffff"
-            android:elevation="4dp"
-            android:textAlignment="center" app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            />
-
-
-        <TextView
-            android:id="@+id/empty_view"
+        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center|center_vertical"
-            android:visibility="gone"
-            android:textColor="#3B3131"
-            android:textStyle="bold"
-            android:textSize="16dp"
-            android:text="@string/no_data_available" />
+            android:fitsSystemWindows="true">
 
-        <fragment
-                android:name="in.pleb.nadget.MainFragment"
-                android:id="@+id/main_fragment"
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appbar"
+                android:layout_width="match_parent"
+                android:layout_height="192dp"
+                android:fitsSystemWindows="true"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+                <android.support.design.widget.CollapsingToolbarLayout
+                    android:id="@+id/collapsing_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                    <ImageView
+                        android:id="@+id/header"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/headerbg"
+                        android:fitsSystemWindows="true"
+                        android:scaleType="centerCrop"
+                        app:layout_collapseMode="parallax" />
+
+
+                    <android.support.v7.widget.Toolbar
+                        android:id="@+id/main_toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="94dp"
+                        app:layout_collapseMode="pin"
+                        android:textAlignment="center"
+                        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+                </android.support.design.widget.CollapsingToolbarLayout>
+                </android.support.design.widget.AppBarLayout>
+
+            <TextView
+                android:id="@+id/empty_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/white"
-                android:text="@string/placeholder"
-                tools:layout="@layout/main_fragment" >
+                android:gravity="center|center_vertical"
+                android:visibility="gone"
+                android:textColor="#3B3131"
+                android:textStyle="bold"
+                android:textSize="16dp"
+                android:text="@string/no_data_available" />
 
-        </fragment>
+            <fragment
+                    android:name="in.pleb.nadget.MainFragment"
+                    android:id="@+id/main_fragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white"
+                    android:text="@string/placeholder"
+                    tools:layout="@layout/main_fragment"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+        </android.support.design.widget.CoordinatorLayout>
     </FrameLayout>
 
     <!-- The navigation drawer -->
