--- a/app/src/main/res/layout/activity_nadget_main.xml
+++ b/app/src/main/res/layout/activity_nadget_main.xml
@@ -39,10 +39,17 @@
                         android:id="@+id/main_toolbar"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
+                        android:elevation="4dp"
                         app:layout_collapseMode="pin"
-                        android:textAlignment="center"
                         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+                        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                        <ImageView
+                            android:id="@+id/logo_view"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="left"
+                            android:src="@drawable/nadget_logo_white_large" />
+                        </android.support.v7.widget.Toolbar>
 
                 </android.support.design.widget.CollapsingToolbarLayout>
                 </android.support.design.widget.AppBarLayout>
