--- a/app/src/main/res/layout/activity_about_nadget.xml
+++ b/app/src/main/res/layout/activity_about_nadget.xml
@@ -49,7 +49,8 @@
         android:layout_weight="0.09"
         android:textColor="#3B3131"
         android:typeface="normal"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        android:autoLink="web" />
 
 
 </LinearLayout>
