--- a/app/src/main/res/layout/activity_saved_feeds.xml
+++ b/app/src/main/res/layout/activity_saved_feeds.xml
@@ -31,5 +31,11 @@
         android:id="@+id/listView"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:paddingTop="4dp" />
+        android:paddingTop="4dp"
+        android:longClickable="true"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:paddingBottom="4dp"
+        android:listSelector="@color/button_material_light"
+        android:elevation="4dp" />
 </LinearLayout>
