--- a/app/src/main/res/layout/main_view_row.xml
+++ b/app/src/main/res/layout/main_view_row.xml
@@ -4,14 +4,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#E0E0E0">
+    >
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10sp"
-        app:cardElevation="2sp"
-        app:cardBackgroundColor="#ffffff"
+        app:cardElevation="3sp"
         android:layout_gravity="center"
         app:cardUseCompatPadding="true"
         android:id="@+id/cv">
@@ -32,7 +31,6 @@
             android:typeface="sans"
             android:gravity="center"
             android:textSize="18dp"
-            android:textColor="#3B3131"
             android:paddingLeft="7dp"
             android:paddingTop="20dp"
             android:paddingRight="7dp"
@@ -53,7 +51,6 @@
                 android:textStyle="italic"
                 android:gravity="center"
                 android:textSize="14dp"
-                android:textColor="#3B3131"
                 android:paddingLeft="7dp"
                 android:paddingTop="10dp"
                 android:paddingRight="7dp"
@@ -66,8 +63,7 @@
                     android:id="@+id/saveArticle"
                     android:src="@drawable/ic_action_favorite_grey"
                     android:layout_toEndOf="@id/postDate"
-                    android:background="#ffffff"
-                     />
+                    android:background="@null" />
 
                 <ImageButton
                     android:layout_width="wrap_content"
@@ -76,8 +72,7 @@
                     android:src="@drawable/ic_action_share_grey"
                     android:layout_gravity="right"
                     android:layout_toEndOf="@id/saveArticle"
-                    android:background="#ffffff"
-                     />
+                    android:background="@null" />
 
             </RelativeLayout>
 
