Intermediate version with several changes - not tested
Post view with no image option
Using Nadget Header for err and placeholder in card view
Font change in post view
Padding reduced to image view in card view
Dead feeds removed and replaced with others

--- a/app/src/main/res/menu/menu_post_view.xml
+++ b/app/src/main/res/menu/menu_post_view.xml
@@ -12,5 +12,11 @@
         android:title="@string/action_share"
         app:showAsAction="ifRoom"/>
 
+    <item
+        android:id="@+id/action_noimages"
+        android:icon="@drawable/ic_no_camera_100"
+        android:title="@string/action_noimages"
+        app:showAsAction="ifRoom"/>
+
 
 </menu>
